--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tevm Cast Clone</title>
+    <meta name="description" content="Tevm Cast Clone - A web-based Ethereum CLI tool for interacting with various networks">
+    <meta name="keywords" content="Tevm, Cast, Ethereum, CLI, blockchain, smart contracts">
+    <meta name="author" content="Your Name or Company">
+    <meta name="robots" content="index, follow">
+    <title>Tevm Cast Clone | Ethereum CLI Tool</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" crossorigin href="/index.css">
+    <link rel="canonical" href="https://your-domain.com/index.html">
+    <meta property="og:title" content="Tevm Cast Clone | Ethereum CLI Tool">
+    <meta property="og:description" content="Web-based Ethereum CLI tool for interacting with Mainnet, Optimism, and Base networks">
+    <meta property="og:image" content="https://your-domain.com/og-image.jpg">
+    <meta property="og:url" content="https://your-domain.com/index.html">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <div class="container">
