feat: Add more network support

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         <select id="networkSelect">
             <option value="">Select a network</option>
             <option value="mainnet">Mainnet</option>
-            <option value="optimism">Optimism</option>
+            <option value="arbitrum">Arbitrum</option>
             <option value="base">Base</option>
+            <option value="optimism">Optimism</option>
+            <option value="polygon">Polygon</option>
+            <option value="redstone">Redstone</option>
+            <option value="zora">Zora</option>
         </select>
 
         <label for="rpcUrl" style="display:none">RPC URL:</label>
