status bar to black
ideally would be translucent or blue but apple doesn't really support that well in my experience.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Tevm Cast Clone - A web-based Ethereum CLI tool for interacting with various networks">
     <meta name="keywords" content="Tevm, Cast, Ethereum, CLI, blockchain, smart contracts">
     <meta name="author" content="Your Name or Company">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="robots" content="index, follow">
     <title>Tevm Cast Clone | Ethereum CLI Tool</title>
     <link rel="stylesheet" href="index.css">
