feat: start with a cast call

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </select>
         </div>
 
-        <label for="commandInput" style="display:none">Enter a command:</label>
+        <label for="commandInput" value="cast call 0xb47e3cd837ddf8e4c57f05d70ab865de6e193bbb balanceOf(address) 0xb47e3cd837ddf8e4c57f05d70ab865de6e193bbb --trace --access-list" style="display:none">Enter a command:</label>
         <textarea
           id="commandInput"
           autocomplete="off"
