feat: Add more networks

--- a/index.html
+++ b/index.html
@@ -40,26 +40,54 @@
             <option disabled>──────────</option>
             <option value="arbitrum">Arbitrum</option>
             <option value="arbitrumNova">Arbitrum Nova</option>
+            <option value="aurora">Aurora</option>
             <option value="avalanche">Avalanche</option>
             <option value="base">Base</option>
+            <option value="bearNetworkChainMainnet">Bear Network Chain</option>
             <option value="berachain">Berachain</option>
             <option value="blast">Blast</option>
+            <option value="boba">Boba</option>
+            <option value="bsc">BSC</option>
             <option value="celo">Celo</option>
+            <option value="cronos">Cronos</option>
+            <option value="fantom">Fantom</option>
+            <option value="filecoin">Filecoin</option>
+            <option value="gnosis">Gnosis</option>
+            <option value="harmonyOne">Harmony One</option>
+            <option value="kava">Kava</option>
+            <option value="linea">Linea</option>
+            <option value="lyra">Lyra</option>
             <option value="manta">Manta</option>
             <option value="mantle">Mantle</option>
+            <option value="metis">Metis</option>
+            <option value="mode">Mode</option>
+            <option value="moonbeam">Moonbeam</option>
+            <option value="moonriver">Moonriver</option>
+            <option value="opBNB">opBNB</option>
             <option value="optimism">Optimism</option>
             <option value="polygon">Polygon</option>
+            <option value="polygonZkEvm">Polygon zkEVM</option>
             <option value="redstone">Redstone</option>
             <option value="scroll">Scroll</option>
             <option value="zksync">zkSync</option>
             <option value="zora">Zora</option>
             <option disabled>──────────</option>
             <option value="arbitrumSepolia">Arbitrum Sepolia</option>
+            <option value="auroraTestnet">Aurora Testnet</option>
             <option value="baseSepolia">Base Sepolia</option>
+            <option value="berachainTestnet">Berachain Testnet</option>
+            <option value="blastSepolia">Blast Sepolia</option>
+            <option value="cronosTestnet">Cronos Testnet</option>
+            <option value="holesky">Holesky</option>
+            <option value="kavaTestnet">Kava Testnet</option>
+            <option value="lineaTestnet">Linea Testnet</option>
             <option value="optimismSepolia">Optimism Sepolia</option>
+            <option value="polygonMumbai">Polygon Mumbai</option>
+            <option value="polygonZkEvmTestnet">Polygon zkEVM Testnet</option>
             <option value="sepolia">Sepolia</option>
             <option value="zksyncSepolia">zkSync Sepolia</option>
             <option value="zoraSepolia">Zora Sepolia</option>
+            <option value="zoraTestnet">Zora Testnet</option>
         </select>
 
         <label for="rpcUrl" style="display:none">RPC URL:</label>
