feat: Format trace

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <div class="skeleton-line"></div>
         </div>
         <pre id="output" aria-live="polite"></pre>
+        <div id="traceOutput" aria-live="polite"></div>
     </div>
 
     <div id="app"></div>
