feat: Add apechain

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <option disabled>──────────</option>
             <option value="arbitrum">Arbitrum</option>
             <option value="arbitrumNova">Arbitrum Nova</option>
+            <option value="ape">Apechain</option>
             <option value="aurora">Aurora</option>
             <option value="avalanche">Avalanche</option>
             <option value="base">Base</option>
